# order-app

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
requirements/: requirements.local.txt  requirements.migration.txt  requirements.queue.txt  requirements.tests.txt  requirements.txt  requirements.web.txt
src/application/: layer.py
src/application/commands/ask_for_callback_request/: command.py  handler.py
src/application/commands/complete_order/: command.py  handler.py
src/application/commands/create_order/: command.py  handler.py
src/application/commands/mark_order_as_failed_for_products_reservation/: command.py  handler.py
src/application/commands/start_order_processing/: command.py  handler.py
src/domain/order/entity/: order.py  order_status.py
src/domain/order/events/: order_created.py  order_submitted_for_processing.py
src/domain/order/exception/: client_email_is_invalid.py  client_phone_number_is_invalid.py  customer_email_is_invalid.py  customer_phone_number_is_invalid.py  invalid_order_status.py  new_order_status_code_duplicates_builtin_codes.py  not_new_order_cant_fail_products_reservation.py  only_new_order_can_be_marked_as_processing.py  only_processing_order_can_be_completed.py  order_cant_contain_no_products.py  order_comment_cant_be_empty.py  order_comment_too_long.py  order_product_cant_contain_zero_or_less_units.py  order_status_code_cant_be_empty.py  order_status_code_is_long.py  order_status_description_cant_be_empty.py  order_status_description_is_long.py  order_status_name_cant_be_empty.py  order_status_name_is_long.py  order_status_not_found.py  string_can_be_emtpy.py  string_value_too_big.py
src/domain/order/repository/: order.py  order_status.py
src/domain/order/service/: mail.py  order.py
src/domain/order/value_object/: client_personal_info.py  customer_personal_info.py  order_product.py  ordered_product.py
src/domain/service/entity/: callback_request.py
src/domain/service/exception/: comment_content_is_long.py  customer_email_is_invalid.py  customer_name_cant_be_empty.py  customer_name_has_invalid_length.py  customer_name_is_long.py  customer_phone_number_is_invalid.py
src/domain/service/repository/: callback_request.py
src/domain/service/service/: mail.py
src/domain/service/value_object/: customer_personal_info.py  note.py  time_info.py
src/infrastructure/: layer.py
src/infrastructure/bus/middleware/: event_dispatcher.py  transaction.py
src/infrastructure/clients/: http_.py  smtp.py
src/infrastructure/clients/catalog/: client.py  contracts.py
src/infrastructure/clients/catalog/exception/: failed_to_fetch_product_details.py  invalid_product_details_response_body.py
src/infrastructure/clients/iac/: client.py  contracts.py
src/infrastructure/clients/iac/exception/: failed_to_fetch_admin_emails.py  invalid_emails_response_body.py
src/infrastructure/database/base/: transaction.py
src/infrastructure/database/in_memory/repository/: callback_request.py  order.py  order_status.py
src/infrastructure/database/relational/: connection.py  mapper.py  transaction.py
src/infrastructure/database/relational/mapper/: base.py  callback_request.py  order.py  order_status.py
src/infrastructure/database/relational/migrations/: alembic.ini  env.py  v0.py  v1.py  yoyo.ini
src/infrastructure/database/relational/models/: base.py  comment.py
src/infrastructure/database/relational/repository/: base.py  callback_request.py  comment.py  mixin.py  order.py  order_status.py
src/infrastructure/database/relational/tables/: base.py  order.py  order_status.py  order_to_order_status.py
src/infrastructure/message_broker/: destination.py  publisher.py
src/infrastructure/message_broker/rabbitmq/: connection.py  publisher.py
src/infrastructure/monitoring/: metrics.py
src/infrastructure/service/exception/: no_admin_emails_were_returned.py  not_all_product_names_were_returned.py
src/infrastructure/service/mail/: mail.py  models.py  service.py
src/infrastructure/service/mail/templates/: completed_order_customer.html  failed_order_admin.html  failed_order_customer.html  in_progress_order_admin.html  in_progress_order_customer.html  new_callback_request_admin.html  new_order_customer.html
src/infrastructure/service/templates/: completed_order_customer.html
src/infrastructure/settings/: application.py  catalog.py  database.py  iac.py  rabbitmq.py  smtp.py
src/interface/queue/: app.py  config.py  contracts.py  routes.py
src/interface/queue/contracts/product/: product_deleted.py
src/interface/queue/routes/order/: endpoints.py
src/interface/web/: app.py  contracts.py
src/interface/web/dependencies/: container.py
src/interface/web/middlewares/: container.py  exception.py  metrics.py
src/interface/web/routes/callback_request/: endpoints.py
src/interface/web/routes/comment/: routes.py
src/interface/web/routes/order/: endpoints.py  routes.py
src/tests/: conftest.py
src/tests/integration/: conftest.py
src/tests/integration/application/commands/: test_order_products_failed_to_reserve.py
src/tests/integration/interface/commands/: test_order_products_reserved.py
src/tests/integration/interface/web/: conftest.py  test_callback_request_endpoints.py  test_order_endpoints.py
src/tests/unit/: conftest.py
src/tests/unit/application/commands/: test_ask_for_callback_request_command.py  test_create_order_command.py  test_mark_order_as_failed_for_products_reservation_command.py  test_start_order_processing_command.py
src/tests/unit/domain/order/: test_order_entity.py  test_order_service.py  test_order_status_entity.py  test_ordered_product_value_object.py
src/tests/unit/domain/service/: test_callback_request_entity.py  test_customer_personal_info_value_object.py  test_note_value_object.py  test_time_info_value_object.py
tasks/: __init__.py  deps.py  migrations.py  packages.py  shared.py  test_.py
(+11 files in other folders)
