[project]
name = "order-app"
version = "0.0.1"
description = "The order microservice application."
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-xdist",
    "pytest-asyncio",
]
local = [
    "ipython",
    "invoke",
    "ruff",
    "pre-commit",
]
web = [
    "pydantic-settings",
    "dw-shared-kernel@git+ssh://git@github.com/StartupCorporation/dw-shared-kernel.git@v0.4.0",
    "phonenumbers",
    "email-validator",
    "aio-pika",
    "pydantic",
    "asyncpg",
    "fastapi",
    "uvicorn",
]
migration = [
    "psycopg2-binary",
    "yoyo-migrations",
]
queue = [
    "pydantic-settings",
    "dw-shared-kernel@git+ssh://git@github.com/StartupCorporation/dw-shared-kernel.git@v0.4.0",
    "phonenumbers",
    "email-validator",
    "aio-pika",
    "pydantic",
    "asyncpg",
    "faststream[rabbit,cli]",
]

[tool.ruff]
fix=true
unsafe-fixes = true
line-length = 120
indent-width = 4
exclude = [
    "venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "requirements",
]
target-version = "py313"

[tool.ruff.lint]
ignore = ["N818"]
select = [
    "I",
    "F",
    "E",
    "W",
    "N",
    "A",
    "COM",
    "PIE",
    "T20",
    "ARG",
    "ERA",
    "FAST",
]

[tool.ruff.lint.per-file-ignores]
"tasks/*" = ["T201", "ARG001"]
"src/infrastructure/database/migrations/env.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "src/tests",
]
pythonpath = [
    "src",
]
